tests/ui/fail_register_for_trait_missing.stderr
error: cannot find macro `__thin_delegate__feed_trait_def_of_ToString` in this scope
 --> tests/ui/fail_register_for_trait_missing.rs:8:6
  |
1 | #[thin_delegate::register]
  | -------------------------- similarly named macro `__thin_delegate__feed_structenum_def_of_Hoge` defined here
...
8 | impl ToString for Hoge {}
  |      ^^^^^^^^ help: a macro with a similar name exists: `__thin_delegate__feed_structenum_def_of_Hoge`
