tests/ui/fail_register_for_trait_missing.rs
#[thin_delegate::register]
enum Hoge {
    A(String),
    B(char),
}

#[thin_delegate::derive_delegate]
impl ToString for Hoge {}

fn main() {}
